# marketscannerpros

./: .deployignore  .easignore  .env.example  .env.local  .env.production.local  .gitignore  .render-trigger  .replit  .replit-deployignore  .vercel-deploy  .vercelignore  AI_PLATFORM_DOCS.md  AI_USAGE_TRACKING.sql  ALPHA_VANTAGE_API_AUDIT.md  ALPHA_VANTAGE_API_AUDIT_2025.md  AUTH_SETUP.md  App.js  BACKTEST_AUDIT_INVENTORY.md  BACKTEST_CODE_HANDOFF.md  BUILD_MOBILE_APPS.md  BUSINESS_MODEL_FULL_PROJECTION.md  BUSINESS_PLAN_2026.md  CHANGES_SUMMARY.md  COMPLETED_DEC_23_2025.md  CRON_RUNBOOK.md  CRYPTO_TIME_CONFLUENCE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_OPTIMIZATION.md  DEVELOPMENT_ROADMAP_2025_2026.md  DEVELOPMENT_ROADMAP_NO_DEV_COSTS.md  Dockerfile.options  Dockerfile.scanner  ENGINE_ROLLOUT.md  ENTITLEMENT_POLICY_MAP.md  FEAR_GREED_INDEX.md  FEATURE_ROADMAP_2026_2027.md  FULL_CODEBASE_AUDIT_2026.md  GITHUB_UPDATES_FINAL.md  GITHUB_UPDATE_SUMMARY.md  (+128 more)
.bak/: App.js.1758802241  App.js.1758802551  app.json.1758802241  app.json.1758802551
.github/: copilot-instructions.md
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
.streamlit/: config.toml  secrets.toml
.vercel/: .env.production.local  project.json
android-build/: build-apk.sh
api/: alpha_vantage.py  options_scanner.py  options_service.py  requirements.txt  (+4 more)
(+2579 files in other folders)
