[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cffi>=2.0.0",
    "cryptography>=46.0.1",
    "fastapi>=0.117.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0.post0",
    "qrcode[pil]>=8.2",
    "requests>=2.32.5",
    "sendgrid>=6.12.5",
    "streamlit>=1.49.1",
    "stripe>=12.5.1",
    "uvicorn>=0.37.0",
    "yfinance>=0.2.66",
]
