[metadata]
name = marketscannerpros-pages
version = 0.0.0

[options]
# Do not actually include any code as a package
packages = find:

[options.packages.find]
# Exclude everything in the repo so pip install . is a no-op
exclude =
    icons*
    mobile*
    static*
    node_modules*
    attached_assets*
    .expo*
    android-build*
